--- a/Photographer_Recommender_Content_Base.ipynb
+++ b/Photographer_Recommender_Content_Base.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,16 @@
     "import selenium.webdriver.support.ui as sui\n",
     "from bs4 import BeautifulSoup\n",
     "from IPython.display import Image\n",
-    "import time"
+    "import time\n",
+    "import sqlite3\n",
+    "import pyautogui\n",
+    "import os\n",
+    "# import keras"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,38 +54,193 @@
     "                photographer_pages.append(ele.get_attribute(\"href\"))\n",
     "    driver.close()\n",
     "    return general_info, stats, photographer_pages\n",
-    "    \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import urllib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver = webdriver.Firefox()\n",
+    "driver.get(\"https://www.google.com/search?biw=1853&bih=692&tbm=isch&sa=1&ei=Hf_xXICRC5Dp_Qa-wJYI&q=shingles+rash&oq=shingles+rash&gs_l=img.3...0.0..47043...0.0..0.0.0.......0......gws-wiz-img.wjhY75Vozf8\")\n",
+    "time.sleep(1)\n",
+    "elements = driver.find_elements_by_xpath(\"//img[@class='rg_ic rg_i']\")\n",
+    "actionChains = webdriver.ActionChains(driver)\n",
+    "\n",
+    "time.sleep(1)\n",
+    "for num, ele in enumerate(elements[10:20]):\n",
+    "#     actionChains.context_click(ele).perform()\n",
+    "#     time.sleep(1)\n",
+    "#     for dummy in range(11):\n",
+    "#         pyautogui.press(\"down\")\n",
+    "#     pyautogui.press(\"enter\")\n",
+    "#     time.sleep(1)\n",
+    "#     if num == 0:\n",
+    "#         pyautogui.typewrite(f'Shingles/img_{num}', interval=0.25)\n",
+    "#         pyautogui.press(\"enter\")\n",
+    "#     else:\n",
+    "#         pyautogui.typewrite(f'img_{num}', interval=0.25)\n",
+    "#         pyautogui.press(\"enter\")\n",
+    "#     time.sleep(1)\n",
+    "    try:\n",
+    "        src = ele.get_attribute(\"src\")\n",
+    "        urllib.request.urlretrieve(src, f\"Shingles/img_{num}.png\")\n",
+    "    except:\n",
+    "        try:\n",
+    "            print(ele.get_attribute(\"src\"))\n",
+    "        except:\n",
+    "            print(\"No Source\")\n",
+    "driver.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['CHRIS ANDERS', 'Jersey Shore'], ['MICHELLE ARLOTTA', 'Central New Jersey']]"
+       "b'/home/rvent/image_classifier/image_classifier'"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clean_general_info_lst(a)"
+    "import os\n",
+    "os.getcwdb()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "InvalidSessionIdException",
+     "evalue": "Message: Tried to run command without establishing a connection\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mInvalidSessionIdException\u001b[0m                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-70-c95c196074e4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0me\u001b[0m \u001b[0;32min\u001b[0m \u001b[0melements\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_attribute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"src\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/home/rvent/.local/lib/python3.6/site-packages/selenium/webdriver/remote/webelement.py\u001b[0m in \u001b[0;36mget_attribute\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    139\u001b[0m             attributeValue = self.parent.execute_script(\n\u001b[1;32m    140\u001b[0m                 \u001b[0;34m\"return (%s).apply(null, arguments);\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mgetAttribute_js\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 141\u001b[0;31m                 self, name)\n\u001b[0m\u001b[1;32m    142\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    143\u001b[0m             \u001b[0mresp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_execute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCommand\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGET_ELEMENT_ATTRIBUTE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/rvent/.local/lib/python3.6/site-packages/selenium/webdriver/remote/webdriver.py\u001b[0m in \u001b[0;36mexecute_script\u001b[0;34m(self, script, *args)\u001b[0m\n\u001b[1;32m    634\u001b[0m         return self.execute(command, {\n\u001b[1;32m    635\u001b[0m             \u001b[0;34m'script'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mscript\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 636\u001b[0;31m             'args': converted_args})['value']\n\u001b[0m\u001b[1;32m    637\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    638\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mexecute_async_script\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscript\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/rvent/.local/lib/python3.6/site-packages/selenium/webdriver/remote/webdriver.py\u001b[0m in \u001b[0;36mexecute\u001b[0;34m(self, driver_command, params)\u001b[0m\n\u001b[1;32m    319\u001b[0m         \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommand_executor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdriver_command\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    320\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 321\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merror_handler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcheck_response\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    322\u001b[0m             response['value'] = self._unwrap_value(\n\u001b[1;32m    323\u001b[0m                 response.get('value', None))\n",
+      "\u001b[0;32m/home/rvent/.local/lib/python3.6/site-packages/selenium/webdriver/remote/errorhandler.py\u001b[0m in \u001b[0;36mcheck_response\u001b[0;34m(self, response)\u001b[0m\n\u001b[1;32m    240\u001b[0m                 \u001b[0malert_text\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'alert'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'text'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    241\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malert_text\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 242\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    243\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    244\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_value_or_default\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdefault\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mInvalidSessionIdException\u001b[0m: Message: Tried to run command without establishing a connection\n"
+     ]
+    }
+   ],
+   "source": [
+    "for e in elements[0:2]:\n",
+    "    print(e.get_attribute(\"src\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def create_photographer_dictionary(general_info, stats, link):\n",
-    "    photographer = {general_info[0]: {\"Area\" : general_info[1], \"\"}"
+    "    stats.update({\"Area\" : general_info[1], \"Webpage\" : link})\n",
+    "    photographer = {general_info[0]: stats}\n",
+    "    return photographer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_photographer_dictionaries(general_info, stats, links):\n",
+    "    size = len(general_info)\n",
+    "    dic = {}\n",
+    "    for idx in range(size):\n",
+    "        dic.update(create_photographer_dictionary(general_info[idx], stats[idx], links[idx]))\n",
+    "    return dic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# in order as they appear in the list NJ, NY, CT, PA\n",
+    "STATE_NUM = [34, 36, 14, 41]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d.update({3:\"yo\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 'hey', 3: 'yo'}"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'CHRIS ANDERS': {'Area': 'Jersey Shore',\n",
+       "  'Webpage': 'https://www.fearlessphotographers.com/photographer/6641/chris-anders',\n",
+       "  'data_awards': '0',\n",
+       "  'data_like_count': '31',\n",
+       "  'data_price_range': '2',\n",
+       "  'data_rank_all': '1702',\n",
+       "  'data_review_count': '0',\n",
+       "  'data_wedding_count': '36'}}"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "create_photographer_dictionary(a[0], b[0], c[0])"
    ]
   },
   {
@@ -229,6 +388,7 @@
     }
    ],
    "source": [
+    "img_2\n",
     "for x in d:\n",
     "    y = x.split(\"\\n\")\n",
     "    print(y)"
