change image grabbing function to create folder with _ if space is present

--- a/Image_Classifier.ipynb
+++ b/Image_Classifier.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from selenium import webdriver\n",
@@ -13,7 +21,14 @@
     "from bs4 import BeautifulSoup\n",
     "import urllib\n",
     "import time\n",
-    "import os"
+    "import os\n",
+    "import keras\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers.convolutional import Conv2D\n",
+    "from keras.layers.convolutional import MaxPooling2D\n",
+    "from keras.layers.core import Activation\n",
+    "from keras.layers.core import Flatten\n",
+    "from keras.layers.core import Dense"
    ]
   },
   {
@@ -25,146 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n"
-     ]
-    }
-   ],
-   "source": [
-    "driver = webdriver.Firefox()\n",
-    "driver.get(\"https://www.google.com/imghp\")\n",
-    "time.sleep(1)\n",
-    "element = driver.find_element_by_xpath(\"//input[@class='gLFyf gsfi']\")\n",
-    "element.send_keys(\"shingles\")\n",
-    "time.sleep(1)\n",
-    "element.send_keys(Keys.ENTER)\n",
-    "time.sleep(1)\n",
-    "elements = driver.find_elements_by_xpath(\"//img[@class='rg_ic rg_i']\")\n",
-    "time.sleep(1)\n",
-    "for num, ele in enumerate(elements):\n",
-    "    try:\n",
-    "        src = ele.get_attribute(\"src\")\n",
-    "        urllib.request.urlretrieve(src, f\"Shingles/img_{num}.png\")\n",
-    "    except:\n",
-    "        print(\"No Source\")\n",
-    "driver.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# function that searches different search terms\n",
     "def find_image(term):\n",
-    "    if not os.path.isdir(f\"./{term}\"):\n",
-    "        os.makedirs(f\"./{term}\")\n",
+    "    folder = term.replace(\" \", \"_\")\n",
+    "    if not os.path.isdir(f\"./{folder}\"):\n",
+    "        os.makedirs(f\"./{folder}\")\n",
     "    driver = webdriver.Firefox()\n",
     "    driver.get(\"https://www.google.com/imghp\")\n",
     "    time.sleep(1)\n",
@@ -178,7 +62,7 @@
     "    for num, ele in enumerate(elements):\n",
     "        try:\n",
     "            src = ele.get_attribute(\"src\")\n",
-    "            urllib.request.urlretrieve(src, f\"{term}/img_{num}.png\")\n",
+    "            urllib.request.urlretrieve(src, f\"{folder}/img_{num}.png\")\n",
     "        except:\n",
     "            print(\"No Source\")\n",
     "    driver.close()"
@@ -186,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -261,15 +145,12 @@
       "No Source\n",
       "No Source\n",
       "No Source\n",
-      "No Source\n",
-      "No Source\n",
-      "No Source\n",
       "No Source\n"
      ]
     }
    ],
    "source": [
-    "find_image(\"measles\")"
+    "find_image(\"chicken pox\")"
    ]
   },
   {
@@ -277,7 +158,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "keras."
+   ]
   }
  ],
  "metadata": {
@@ -296,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
