--- a/Image_Classifier.ipynb
+++ b/Image_Classifier.ipynb
@@ -155,11 +155,107 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def try_this():\n",
+    "    for x in range(1,10):\n",
+    "        print(x)\n",
+    "    !git status\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "On branch master\n",
+      "Your branch is up to date with 'origin/master'.\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add/rm <file>...\" to update what will be committed)\n",
+      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
+      "\n",
+      "\t\u001b[31mmodified:   Photographer_Recommender_Content_Base.ipynb\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_0.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_1.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_10.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_11.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_12.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_13.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_14.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_15.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_16.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_17.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_18.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_19.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_2.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_20.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_21.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_22.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_23.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_24.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_25.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_26.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_27.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_28.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_29.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_3.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_30.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_31.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_32.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_33.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_4.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_5.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_6.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_7.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_8.png\u001b[m\n",
+      "\t\u001b[31mdeleted:    Shingles/img_9.png\u001b[m\n",
+      "\n",
+      "Untracked files:\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\n",
+      "\n",
+      "\t\u001b[31m.ipynb_checkpoints/\u001b[m\n",
+      "\t\u001b[31mImage_Classifier-Copy1.ipynb\u001b[m\n",
+      "\t\u001b[31m__pycache__/\u001b[m\n",
+      "\t\u001b[31mchicken_pox/\u001b[m\n",
+      "\t\u001b[31mconfig.py\u001b[m\n",
+      "\t\u001b[31memailer.py\u001b[m\n",
+      "\t\u001b[31mgeckodriver.log\u001b[m\n",
+      "\t\u001b[31minfo_grabber.py\u001b[m\n",
+      "\t\u001b[31mmeasles/\u001b[m\n",
+      "\t\u001b[31mshingles/\u001b[m\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "try_this()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "keras."
+    "!git add "
    ]
   }
  ],
