add training, test, val folders and image manipulation

--- a/Image_Classifier.ipynb
+++ b/Image_Classifier.ipynb
@@ -32,6 +32,140 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_shingle = [file for file in os.listdir('shingles/')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_chicken_pox = [file for file in os.listdir('chicken_pox/')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_measles = [file for file in os.listdir('measles/')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_dir = 'split/'\n",
+    "os.mkdir(new_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_folder = os.path.join(new_dir, \"train\")\n",
+    "train_shingles = os.path.join(train_folder, \"shingles\")\n",
+    "train_chicken_pox = os.path.join(train_folder, \"chicken_pox\")\n",
+    "train_measles = os.path.join(train_folder, \"measles\")\n",
+    "\n",
+    "test_folder = os.path.join(new_dir, \"test\")\n",
+    "test_shingles = os.path.join(test_folder, \"shingles\")\n",
+    "test_chicken_pox = os.path.join(test_folder, \"chicken_pox\")\n",
+    "test_measles = os.path.join(test_folder, \"measles\")\n",
+    "\n",
+    "val_folder = os.path.join(new_dir, \"validation\")\n",
+    "val_shingles = os.path.join(val_folder, \"shingles\")\n",
+    "val_chicken_pox = os.path.join(val_folder, \"chicken_pox\")\n",
+    "val_measles = os.path.join(val_folder, \"measles\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.mkdir(test_folder)\n",
+    "os.mkdir(test_shingles)\n",
+    "os.mkdir(test_chicken_pox)\n",
+    "os.mkdir(test_measles)\n",
+    "\n",
+    "os.mkdir(train_folder)\n",
+    "os.mkdir(train_shingles)\n",
+    "os.mkdir(train_chicken_pox)\n",
+    "os.mkdir(train_measles)\n",
+    "\n",
+    "os.mkdir(val_folder)\n",
+    "os.mkdir(val_shingles)\n",
+    "os.mkdir(val_chicken_pox)\n",
+    "os.mkdir(val_measles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(img_shingle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "\n",
+    "for img in img_chicken_pox[:2]:\n",
+    "    colorImg  = Image.open(\"chicken_pox/\"+img)\n",
+    " \n",
+    "    # Rotate it by 45 degrees\n",
+    "    rotated = colorImage.rotate(45)\n",
+    "    \n",
+    "    # Vertical transformation\n",
+    "    flipped = colorImg.transpose(Image.FLIP_LEFT_RIGHT)\n",
+    "\n",
+    "    # Display the Original Image\n",
+    "    colorImage.show()\n",
+    "\n",
+    "    # Display the Image rotated by 45 degrees\n",
+    "    flip.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -251,12 +385,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master 228bb56] add git test\r\n",
+      " 1 file changed, 97 insertions(+), 1 deletion(-)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git add Image_Classifier.ipynb\n",
+    "!git commit -m \"add git test\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Username for 'https://github.com': ^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!git add "
-   ]
+   "source": []
   }
  ],
  "metadata": {
